# TCS-NetMon

./: .gitignore  CLAUDE.md  README.md  netmon.conf.example  pyproject.toml  topology.example.json
docs/runbooks/: deploy.md  saml-sso.md  settings.md  site-map.md
docs/spec/: 00-sources.md  01-foundation.md  02-poller.md  03-xiq.md  04-ui.md  05-pf-milestone.md  06-engine.md  07-3cx-rconfig.md  09-site-map.md  10-design-port.md  11-standalone-scope.md  12-settings-engine.md  13-direct-camera-monitoring.md
frontend/: build.mjs  package-lock.json  package.json
frontend/src/: api.js  format.js  history.jsx  macmatch.js  main.jsx  nav.jsx  primitives.jsx  search.jsx  severity.js  ssh.jsx  styles.css
migrations/: 001_init.sql  002_seed_alert_rules.sql  003_seed_alert_rules.sql  004_site_map.sql  005_design_port_foundations.sql  006_switch_inventory.sql  007_app_settings.sql  007_sessions.sql  008_app_settings.sql  009_stack_poe.sql  010_stack_model.sql  011_wireless_inventory.sql  012_pf_nodes.sql  013_surveillance_voip.sql  014_edp_neighbors.sql  015_site_group_key.sql  016_map_link_ports.sql  017_switch_port_sfp.sql  018_fiber_links_redundant.sql  019_state_samples.sql
netmon/: __init__.py  app.py  config.py  db.py  enums.py  health.py  history.py  macmatch.py  migrate.py  secretbox.py  seed.py  settings.py  snapshots.py  state.py  supervisor.py  topology.py
netmon/api/: __init__.py  alerts.py  auth_routes.py  deps.py  devices.py  events.py  health.py  history.py  nac.py  registry.py  search.py  settings.py  sites.py  status.py  summary.py  surveillance.py  switches.py  voip.py  wireless.py
netmon/auth/: __init__.py  ldap.py  local.py  saml.py  sessions.py
netmon/collectors/: README.md  __init__.py  base.py  milestone.py  milestone_client.py  packetfence.py  pf_client.py  rconfig.py  rconfig_client.py  threecx.py  threecx_client.py  ws.py  xiq.py  xiq_client.py
netmon/models/: xiq.py  (+2 more)
scripts/: deploy.sh  pf_export.py  setup_db.sh  shadow_report.py  xiq_export.py  zabbix_export.py
tests/: conftest.py  test_alerts_api.py  test_api.py  test_auth.py  test_collector_health_api.py  test_config.py  test_db.py  test_engine.py  test_events_api.py  test_history.py  test_hysteresis.py  test_migrations.py  test_milestone.py  test_nac_api.py  test_netmon_status_api.py  test_pf.py  test_poller.py  test_probes.py  test_rconfig.py  test_registry_api.py  test_search_api.py  test_seed.py  test_settings.py  test_settings_api.py  test_sites_api.py  test_snmp_inventory.py  test_source_exports.py  test_status_api.py  test_summary_api.py  test_surveillance_voip_api.py  test_switches_api.py  test_threecx.py  test_topology.py  test_wireless_api.py  test_ws.py  test_xiq.py  test_zabbix_export.py
(+86 files in other folders)
